Fixed profile overflow

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,8 +1,9 @@
 .container {
+	overflow: hidden;
+	position: absolute;
 	display: flex;
 	height: 100vh;
 	width: 100vw;
-
 	background: var(--background);
 	background-repeat: no-repeat;
 	background-size: cover;
